--- a/elbek.html
+++ b/elbek.html
@@ -10,5 +10,16 @@
 <body>
     <h1>Elbek Melibayev</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex, autem!</p>
+
+
+    <header>
+        <nav>
+            Elbek
+        </nav>
+    </header>
+
+    <section>
+        <div class="elbek">Something</div>
+    </section>
 </body>
 </html>
