--- a/elbek.html
+++ b/elbek.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Elbek</title>
-    <link rel="stylesheet" href="css/pages/elbek.css">
-</head>
-<body>
+    <link rel="stylesheet" href="css/pages/elbek.css" />
+  </head>
+  <body>
     <h1>Elbek Melibayev</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex, autem!</p>
-</body>
+    <header>
+        <nav>Abdulaziz</nav>
+    </header>
+    <section>
+        <div id="abdulaziz"></div>
+    </section>
+  </body>
 </html>
